[package]
name = "sphero-rs"
authors = ["Corey Montella <corey@mech-lang.org>"]
version = "0.1.0"
license = "Apache-2.0"
repository = "https://github.com/cmontella/sphero-rs"
readme = "README.md"
edition = "2021"

[badges]
github = { repository = "cmontella/sphero-rs", branch = "main" }

[dependencies]
btleplug = "0.7.3"
rand = "*"
uuid = "*"
lazy_static = "1.4.0"